First MM implementation
* Set heap boindaries
* move memset to stdlib
* implement memory allocation
* implement memory release

--- a/libc/Makefile
+++ b/libc/Makefile
@@ -33,10 +33,10 @@ stdio/printf.o \
 stdio/putchar.o \
 stdio/puts.o \
 stdlib/abort.o \
+stdlib/malloc.o \
 string/memcmp.o \
 string/memcpy.o \
 string/memmove.o \
-string/memset.o \
 string/strlen.o \
 string/conv.o \
 string/strcmp.o \
